# libmumble-rs

./: Cargo.toml  build.rs
include/: libmumble.h
src/lib/: lib.rs
src/lib/domain/mumble/models/: ban.rs
src/lib/inbound/cxx/: ban.h  ban.rs
