[package]
name = "libmumble-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "libmumble"
path = "src/lib/lib.rs"
crate-type = ["staticlib"]

[dependencies]
chrono = "0.4.41"
cxx = { version = "1.0.168", features = ["c++14", "c++17", "c++20"] }
ipnet = "2.11.0"

[build-dependencies]
cxx-build = "1.0.168"
